refactored and upd swagger
