# db/models/users.js
@@ -5,7 +5,6 @@ const handleMongooseError = require('../../utils/handleMongooseError');
 
 const emailRegex = /@([\w-]+\.)+[\w-]{2,6}$/
 
-
 const userSchema = new Schema({
     email: {
         type: String,
@@ -20,18 +19,18 @@ const userSchema = new Schema({
     },
     avatarURL: {
         type: String,
-        require: true,
+        required: true,
     },
     favorite: [{ type: Schema.Types.ObjectId, ref: "notice" }],
     name: {
         type: String,
-        default: "",
+        required: [true, "Name is required"],
     },
-    phone: {
+    lastname: {
         type: String,
         default: "",
     },
-    city: {
+    phone: {
         type: String,
         default: "",
     },
@@ -61,6 +60,7 @@ userSchema.post("save", handleMongooseError);
 const registerSchema = Joi.object({
     email: Joi.string().required(),
     password: Joi.string().min(8).required(),
+    name: Joi.string().required(),
 });
 
 const loginSchema = Joi.object({
